Title spacing issues in sidebar and main results

--- a/assets/styles/src/templates/_search.scss
+++ b/assets/styles/src/templates/_search.scss
@@ -13,16 +13,29 @@
 
         overflow: hidden;
 
-		.article__title {
+		.results-text {
 			margin: 0;
 			padding-top: 1rem;
 			border: none;
+            display: block;
+            text-transform: uppercase;
+            letter-spacing: .1em;
+            color: #333;
+            text-decoration: none;
+            font-size: .78571rem;
+            font-weight: 600;
+            line-height: 2rem;
 		}
 
         @include min-width($bp-2) {
+            .results-text {
+                width: 75%;
+            }
+
             .searchAgain {
 			    padding-top: 1rem;
                 float: right;
+                width: 25%;
             }
         }
 
@@ -62,8 +75,11 @@
 
 
     // faculty side bar search styles
-
     .coenv-sidebar-search {
+
+        article:nth-of-type(1) {
+            padding-top: 0rem;
+        }
 
         @include max-width($bp-2) {
             width: 70%;
@@ -76,7 +92,7 @@
         }
 
         .search-feedback {
-            padding: 1rem;
+            padding: 1rem 1rem 0.5rem 1rem;
         }
 
 
@@ -88,6 +104,7 @@
             text-decoration: none;
             font-size: 11px;
             font-size: .78571rem;
+            font-weight: 600;
             text-align: center;
             margin:0;
             padding:0.5rem;
